fixed overlap

--- a/_work/css/bag.css
+++ b/_work/css/bag.css
@@ -156,4 +156,8 @@ td {
 	width: 350px;
 }
 
+#contactpage {
+	margin-bottom: 10rem;
+}
+
 
