--- a/_work/css/finder.css
+++ b/_work/css/finder.css
@@ -1,7 +1,7 @@
 #locator h2 {
 	font-weight: 500;
 	padding:25px;
-	padding-left: 315px;
+	padding-left: 23%;
 	letter-spacing: 1.5px;
 }
 
