--- a/_work/css/main.css
+++ b/_work/css/main.css
@@ -191,5 +191,10 @@ a:active {
         text-align: center;
     }
 
+    #locator img {
+
+        width: 130%;
+    }
+
    
 
